objects/Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Question_Match__c</fullName>
        <label>Dependent Question Match</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dependent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Dependent_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Question_Category__c</fullName>
        <label>Question Category</label>
        <picklist>
            <picklistValues>
                <fullName>IAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAV</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question_Code__c</fullName>
        <label>Question Code</label>
        <picklist>
            <picklistValues>
                <fullName>IAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAF</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question_Id__c</fullName>
        <label>Question Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <picklist>
            <picklistValues>
                <fullName>Yes/No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer Text</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Code__c</fullName>
        <formula>Survey__r.Survey_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Weightage__c</fullName>
        <label>Weightage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey__c</columns>
        <columns>Question__c</columns>
        <columns>Question_Category__c</columns>
        <columns>Question_Type__c</columns>
        <columns>Weightage__c</columns>
        <columns>Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQ-{000}</displayFormat>
        <label>Survey Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>